NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/nps_Feedback__c.object-meta.xml
<CustomObject>
    <description>Custom object to replicate in Salesforce feedback left by customers in NPS.</description>
    <label>Response</label>
    <nameField>
        <label>NPS Feedback</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>