NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/Contact_Influence__c.field-meta.xml
<CustomField>
    <fullName>Contact_Influence__c</fullName>
    <description>Define the level of influence that a contact has within the decision-making process to do business with Carrier (Product or Service)</description>
    <inlineHelpText>Define the level of influence that a contact has within the decision-making process to do business with Carrier (Product or Service)</inlineHelpText>
    <label>Contact Influence</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>