NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/For_which_service_does_feedback_apply__c.field-meta.xml
<CustomField>
    <fullName>For_which_service_does_feedback_apply__c</fullName>
    <formula>TEXT(Response_Driver_13__c)</formula>
    <label>For which service does feedback apply</label>
    <type>Text</type>
</CustomField>