NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/How_well_do_u_feel_reg_our_Sales_support__c.field-meta.xml
<CustomField>
    <fullName>How_well_do_u_feel_reg_our_Sales_support__c</fullName>
    <formula>nps_Response_Driver_10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How well do u feel reg our Sales support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>