NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/NPS_Account__c.field-meta.xml
<CustomField>
    <fullName>NPS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPS Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>