NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>nps_Account_Id__c</fullName>
    <description>Field to link a feedback to an account in Salesforce. The &quot;link&quot; happens on the parent object NPS_Feedback_Header__c object.</description>
    <externalId>true</externalId>
    <label>Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>