NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Account_Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>nps_Account_Owner_s_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner&apos;s Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountOwnerResponses</relationshipName>
    <type>Lookup</type>
</CustomField>