NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Alert_Closed_date__c.field-meta.xml
<CustomField>
    <fullName>nps_Alert_Closed_date__c</fullName>
    <description>This field shows when the corresponding had been closed in NPS</description>
    <label>Alert - Closed date</label>
    <type>DateTime</type>
</CustomField>