NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Alert_Logs__c.field-meta.xml
<CustomField>
    <fullName>nps_Alert_Logs__c</fullName>
    <label>Alert - Logs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>