NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>nps_Alert_Type__c</fullName>
    <description>This field shows what type of alert has been raised in NPS</description>
    <label>Alert - Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>