NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Alert_Yn_Flag__c.field-meta.xml
<CustomField>
    <fullName>nps_Alert_Yn_Flag__c</fullName>
    <description>This field indicates if an alert has been raised in NPS based on customer feedback</description>
    <label>Alert - Yn Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>