NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>nps_Contact_Email__c</fullName>
    <description>This field indicates what the customer&apos;s email is. Useful if the customer is not an existing contact in Salesforce.</description>
    <label>Contact - Email</label>
    <type>Email</type>
</CustomField>