NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Contact_Firstname__c.field-meta.xml
<CustomField>
    <fullName>nps_Contact_Firstname__c</fullName>
    <description>This field indicates what the customer&apos;s name is. Useful if the customer is not an existing contact in Salesforce.</description>
    <label>Contact - Firstname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>