NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>nps_Contact_Id__c</fullName>
    <description>This field is used to link the feedback to an existing contact is Salesforce. The contact object has additional summary fields to calculate insights</description>
    <label>Contact - Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>