NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Contact_Lastname__c.field-meta.xml
<CustomField>
    <fullName>nps_Contact_Lastname__c</fullName>
    <description>This field indicates what the customer&apos;s lastname is. Useful if the customer is not an existing contact in Salesforce.</description>
    <label>Contact - Lastname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>