NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Easiness_to_do_business_with_us__c.field-meta.xml
<CustomField>
    <fullName>nps_Easiness_to_do_business_with_us__c</fullName>
    <formula>nps_Response_Driver_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Easiness to do business with us</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>