NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Follow_up_case_Number__c.field-meta.xml
<CustomField>
    <fullName>nps_Follow_up_case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A follow-up case can be created in Salesforce to mirror an alert raised in NPS. This field link the feedback to the case.</description>
    <label>Follow-up case - Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>NPS_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>