NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Invitation__c.field-meta.xml
<CustomField>
    <fullName>nps_Invitation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invitation</label>
    <referenceTo>nps_Invitation__c</referenceTo>
    <relationshipName>NPS_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>