NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Likelihood_to_recommend__c.field-meta.xml
<CustomField>
    <fullName>nps_Likelihood_to_recommend__c</fullName>
    <formula>nps_Response_Main_score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Likelihood to recommend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>