NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_NPS_Feedback_Header__c.field-meta.xml
<CustomField>
    <fullName>nps_NPS_Feedback_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent Object of this object. The parent object is used to store the rollup summary values.</description>
    <label>NPS Feedback Header</label>
    <referenceTo>nps_Feedback_Header__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>NPS_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>