NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Original_case_Number__c.field-meta.xml
<CustomField>
    <fullName>nps_Original_case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The survey can be triggered by an event on a case (e.g. closure). This field links the feedback to the original case.</description>
    <label>Original case - Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>NPS_Feedbacks1</relationshipName>
    <type>Lookup</type>
</CustomField>