NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Original_case_Owner_id__c.field-meta.xml
<CustomField>
    <fullName>nps_Original_case_Owner_id__c</fullName>
    <description>The survey can be triggered by an event on a case (e.g. closure). This field shows who the owner of the original case is.</description>
    <label>Original case - Owner id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>