NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Our_digital_presence__c.field-meta.xml
<CustomField>
    <fullName>nps_Our_digital_presence__c</fullName>
    <formula>nps_Response_Driver_8__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Our digital presence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>