NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Our_fullofferingat_ProductLine_Level__c.field-meta.xml
<CustomField>
    <fullName>nps_Our_fullofferingat_ProductLine_Level__c</fullName>
    <formula>nps_Response_Driver_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Our full offering at Product Line Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>