NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Our_innovation_Differentiationvsothe__c.field-meta.xml
<CustomField>
    <fullName>nps_Our_innovation_Differentiationvsothe__c</fullName>
    <formula>nps_Response_Driver_7__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Our innovation-Differentiation vs other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>