NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Record_Creation_date__c.field-meta.xml
<CustomField>
    <fullName>nps_Record_Creation_date__c</fullName>
    <description>This field shows when the record was created in NPS</description>
    <label>Record - Creation date</label>
    <type>DateTime</type>
</CustomField>