NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Record_NPS_Id__c.field-meta.xml
<CustomField>
    <fullName>nps_Record_NPS_Id__c</fullName>
    <description>This field indicates what the unique identifier is for the record in NPS</description>
    <externalId>true</externalId>
    <label>Record - NPS Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>