NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Record_Reason_for_exclusion__c.field-meta.xml
<CustomField>
    <fullName>nps_Record_Reason_for_exclusion__c</fullName>
    <description>This fields indicates the reason for not sampling a record. Empty if the record was successfully sampled.</description>
    <label>Record - Reason for exclusion</label>
    <length>128</length>
    <type>Text</type>
</CustomField>