NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Record_Status__c.field-meta.xml
<CustomField>
    <fullName>nps_Record_Status__c</fullName>
    <description>This field shows where the record is in its lifecycle (e.g. invitation, survey completed, etc.)</description>
    <label>Record - Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delivery Failed</fullName>
            </value>
            <value>
                <fullName>Delivery bounced</fullName>
            </value>
            <value>
                <fullName>Reminded</fullName>
            </value>
            <value>
                <fullName>Opted Out</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>