NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>nps_Response_Date__c</fullName>
    <description>This field shows when the customer submitted the feedback back to NPS</description>
    <label>Response - Date</label>
    <type>DateTime</type>
</CustomField>