NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Response_Driver_10__c.field-meta.xml
<CustomField>
    <fullName>nps_Response_Driver_10__c</fullName>
    <label>Response - Driver 10</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>