NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Response_Feedback_URL__c.field-meta.xml
<CustomField>
    <fullName>nps_Response_Feedback_URL__c</fullName>
    <description>This fields is used to show a hyperlink to the feedback in NPS</description>
    <label>Response - Feedback URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>