NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Response_Improvement__c.field-meta.xml
<CustomField>
    <fullName>nps_Response_Improvement__c</fullName>
    <label>How can we improve your experience ?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>