NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Response_Main_score__c.field-meta.xml
<CustomField>
    <fullName>nps_Response_Main_score__c</fullName>
    <description>This field shows the main score from the customer feedback</description>
    <label>Response - Main score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>