NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Response_Main_score_comment__c.field-meta.xml
<CustomField>
    <fullName>nps_Response_Main_score_comment__c</fullName>
    <description>This field shows the comment associated to the main score in the feedback</description>
    <label>Response - Main score comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>