NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Survey_Program__c.field-meta.xml
<CustomField>
    <fullName>nps_Survey_Program__c</fullName>
    <label>Survey Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sensitech</fullName>
            </value>
            <value>
                <fullName>Haier Carrier</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Carrier Transicold</fullName>
            </value>
            <value>
                <fullName>Celsior</fullName>
            </value>
            <value>
                <fullName>Profroid</fullName>
            </value>
            <value>
                <fullName>(Blanks)</fullName>
            </value>
            <value>
                <fullName>Case-closure survey</fullName>
                <isActive>false</isActive>
                <label>Case-closure survey</label>
            </value>
            <value>
                <fullName>Relationship survey</fullName>
                <isActive>false</isActive>
                <label>Relationship survey</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>