NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_The_delivery_of_our_Products__c.field-meta.xml
<CustomField>
    <fullName>nps_The_delivery_of_our_Products__c</fullName>
    <formula>nps_Response_Driver_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>The delivery of our Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>