NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_The_performance_of_our_Services__c.field-meta.xml
<CustomField>
    <fullName>nps_The_performance_of_our_Services__c</fullName>
    <formula>nps_Response_Driver_6__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>The performance of our Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>