NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/nps_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>nps_Ticket_Number__c</fullName>
    <description>Ticket number created in Qualtrics</description>
    <externalId>true</externalId>
    <label>Ticket Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>