NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/Response_Driver_11__c.field-meta.xml
<CustomField>
    <fullName>Response_Driver_11__c</fullName>
    <label>Response - Driver 11</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I am responsible for the decision to work with your business</fullName>
            </value>
            <value>
                <fullName>I am involved in the ongoing purchasing of your products and services</fullName>
            </value>
            <value>
                <fullName>I provide input into the decision to work with your business</fullName>
            </value>
            <value>
                <fullName>I use your products and services that are made available to me</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>