NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/Response_Driver_12__c.field-meta.xml
<CustomField>
    <fullName>Response_Driver_12__c</fullName>
    <label>Response - Driver 12</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aftermarket/Services only</fullName>
            </value>
            <value>
                <fullName>Aftermarket/Services and New equipment</fullName>
            </value>
            <value>
                <fullName>New equipment only (excluding Aftermarket/Services)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>