NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/Response_Driver_13__c.field-meta.xml
<CustomField>
    <fullName>Response_Driver_13__c</fullName>
    <label>Response - Driver 13</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Agreements, Repairs and/or other value added services</fullName>
            </value>
            <value>
                <fullName>Digital Services, remote solutions, software and/or apps</fullName>
            </value>
            <value>
                <fullName>Upgrade, Retrofits and/or Modernizations</fullName>
            </value>
            <value>
                <fullName>Rental equipment and/or products</fullName>
            </value>
            <value>
                <fullName>Aftermarket parts and/or Equipments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>