NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/The_performance_of_our_Products__c.field-meta.xml
<CustomField>
    <fullName>The_performance_of_our_Products__c</fullName>
    <formula>nps_Response_Driver_9__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>The performance of our Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>