NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/fields/Which_describes_business_with_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Which_describes_business_with_Carrier__c</fullName>
    <formula>TEXT(Response_Driver_12__c)</formula>
    <label>Which describes business with Carrier</label>
    <type>Text</type>
</CustomField>