NATTQA-ENV/force-app/main/default/objects/nps_Feedback__c/listViews/UAT.listView-meta.xml
<ListView>
    <fullName>UAT</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>nps_Contact_Firstname__c</columns>
    <columns>nps_Contact_Lastname__c</columns>
    <columns>nps_Likelihood_to_recommend__c</columns>
    <columns>nps_Ticket_Number__c</columns>
    <columns>nps_Contact_Id__c</columns>
    <columns>nps_Contact_Email__c</columns>
    <columns>nps_Account_Owner_s_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>UAT</label>
</ListView>